<resources>
    <string name="app_name">Cart</string>
    <string name="page_title">Card</string>
    <string name="content_description_favorite">content description favorite</string>
    <string name="search">Search</string>
    <string name="content_description_search">content description search</string>
    <string name="more">more</string>
    <string name="content_description_more">content_description_more</string>
    <string name="total">TOTAL</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="tax">Tax</string>
    <string name="value_total">$41.24</string>
    <string name="value_subtotal">$36.00</string>
    <string name="shipping_value">$2.00</string>
    <string name="tax_value">$3.24</string>
    <string name="checkout">CHECKOUT</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>